--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,11 @@
   "crons": [
     {
       "path": "/api/cron",
-      "schedule": "0 14 * * *"
+      "schedule": "15-59/15 16 * * *"
+    },
+    {
+      "path": "/api/cron",
+      "schedule": "0-59/15 17-23 * * *"
     }
   ]
 }
