--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "crons": [
     {
       "path": "/api/cron",
-      "schedule": "0 8 * * *",
-      "timezone": "Europe/Paris"
+      "schedule": "0 6 * * *"
     }
   ]
 }
